--- a/src/sass/variables/_variables.scss
+++ b/src/sass/variables/_variables.scss
@@ -138,3 +138,35 @@ $table-bg-active:               $table-bg-hover !default;
 //** Border color for table and cell borders.
 $table-border-color:            #ddd !default;
 
+
+
+
+
+
+//== Type
+//
+//##
+
+//** Horizontal offset for forms and lists.
+$component-offset-horizontal: 180px !default;
+//** Text muted color
+$text-muted:                  $gray-light !default;
+/*/!** Abbreviations and acronyms border color
+$abbr-border-color:           $gray-light !default;
+/!** Headings small color
+$headings-small-color:        $gray-light !default;
+/!** Blockquote small color
+$blockquote-small-color:      $gray-light !default;
+/!** Blockquote font size
+$blockquote-font-size:        ($font-size-base * 1.25) !default;
+/!** Blockquote border color
+$blockquote-border-color:     $gray-lighter !default;
+/!** Page header border color
+$page-header-border-color:    $gray-lighter !default;
+/!** Width of horizontal description list titles
+$dl-horizontal-offset:        $component-offset-horizontal !default;
+/!** Point at which .dl-horizontal becomes horizontal
+$dl-horizontal-breakpoint:    $grid-float-breakpoint !default;
+/!** Horizontal line color.
+$hr-border:                   $gray-lighter !default;*/
+
