--- a/src/sass/modules/_table.scss
+++ b/src/sass/modules/_table.scss
@@ -203,3 +203,312 @@ table {
     }
   }
 }
+
+
+.cui-table .table {
+  margin-bottom: 0 !important;
+  border-bottom: 1px solid #dddddd;
+  border-collapse: collapse !important;
+  border-radius: 1px;
+}
+
+.cui-table .table:not(.table-condensed),
+.cui-table .table:not(.table-condensed) > tbody > tr > th,
+.cui-table .table:not(.table-condensed) > tfoot > tr > th,
+.cui-table .table:not(.table-condensed) > thead > tr > td,
+.cui-table .table:not(.table-condensed) > tbody > tr > td,
+.cui-table .table:not(.table-condensed) > tfoot > tr > td {
+  padding: 8px;
+}
+
+.cui-table .table.table-no-bordered > thead > tr > th,
+.cui-table .table.table-no-bordered > tbody > tr > td {
+  border-right: 2px solid transparent;
+}
+
+.cui-table .table.table-no-bordered > tbody > tr > td:last-child {
+  border-right: none;
+}
+
+.cui-table-container {
+  position: relative;
+  clear: both;
+  border: 1px solid #dddddd;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+}
+
+.cui-table-container.table-no-bordered {
+  border: 1px solid transparent;
+}
+
+.cui-table-footer,
+.cui-table-header {
+  overflow: hidden;
+}
+
+.cui-table-footer {
+  border-top: 1px solid #dddddd;
+}
+
+.cui-table-body {
+  overflow-x: auto;
+  overflow-y: auto;
+  height: 100%;
+}
+
+.cui-table-container table {
+  width: 100%;
+}
+
+.cui-table-container thead th {
+  height: 0;
+  padding: 0;
+  margin: 0;
+  border-left: 1px solid #dddddd;
+}
+
+.cui-table-container thead th:focus {
+  outline: 0 solid transparent;
+}
+
+.cui-table-container thead th:first-child {
+  border-left: none;
+  border-top-left-radius: 4px;
+  -webkit-border-top-left-radius: 4px;
+  -moz-border-radius-topleft: 4px;
+}
+
+.cui-table-container thead th .th-inner,
+.cui-table-container tbody td .th-inner {
+  padding: 8px;
+  line-height: 24px;
+  vertical-align: top;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.cui-table-container thead th .sortable {
+  cursor: pointer;
+  background-position: right;
+  background-repeat: no-repeat;
+  padding-right: 30px;
+}
+
+.cui-table-container thead th .both {
+  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABMAAAATCAQAAADYWf5HAAAAkElEQVQoz7X QMQ5AQBCF4dWQSJxC5wwax1Cq1e7BAdxD5SL+Tq/QCM1oNiJidwox0355mXnG/DrEtIQ6azioNZQxI0ykPhTQIwhCR+BmBYtlK7kLJYwWCcJA9M4qdrZrd8pPjZWPtOqdRQy320YSV17OatFC4euts6z39GYMKRPCTKY9UnPQ6P+GtMRfGtPnBCiqhAeJPmkqAAAAAElFTkSuQmCC');
+}
+
+.cui-table-container thead th .asc {
+  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABMAAAATCAYAAAByUDbMAAAAZ0lEQVQ4y2NgGLKgquEuFxBPAGI2ahhWCsS/gDibUoO0gPgxEP8H4ttArEyuQYxAPBdqEAxPBImTY5gjEL9DM+wTENuQahAvEO9DMwiGdwAxOymGJQLxTyD+jgWDxCMZRsEoGAVoAADeemwtPcZI2wAAAABJRU5ErkJggg==');
+}
+
+.cui-table-container thead th .desc {
+  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABMAAAATCAYAAAByUDbMAAAAZUlEQVQ4y2NgGAWjYBSggaqGu5FA/BOIv2PBIPFEUgxjB+IdQPwfC94HxLykus4GiD+hGfQOiB3J8SojEE9EM2wuSJzcsFMG4ttQgx4DsRalkZENxL+AuJQaMcsGxBOAmGvopk8AVz1sLZgg0bsAAAAASUVORK5CYII= ');
+}
+
+.cui-table-container th.detail {
+  width: 30px;
+}
+
+.cui-table-container tbody td {
+  border-left: 1px solid #dddddd;
+}
+
+.cui-table-container tbody tr:first-child td {
+  border-top: none;
+}
+
+.cui-table-container tbody td:first-child {
+  border-left: none;
+}
+
+/* the same color with .active */
+.cui-table-container tbody .selected td {
+  background-color: #f5f5f5;
+}
+
+.cui-table-container .bs-checkbox {
+  text-align: center;
+}
+
+.cui-table-container .bs-checkbox .th-inner {
+  padding: 8px 0;
+}
+
+.cui-table-container input[type="radio"],
+.cui-table-container input[type="checkbox"] {
+  margin: 0 auto !important;
+}
+
+.cui-table-container .no-records-found {
+  text-align: center;
+}
+
+.cui-table-pagination div.pagination,
+.cui-table-pagination .pagination-detail {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.cui-table-pagination div.pagination .pagination {
+  margin: 0;
+}
+
+.cui-table-pagination .pagination a {
+  padding: 6px 12px;
+  line-height: 1.428571429;
+}
+
+.cui-table-pagination .pagination-info {
+  line-height: 34px;
+  margin-right: 5px;
+}
+
+.cui-table-pagination .btn-group {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.cui-table-pagination .dropup .dropdown-menu {
+  margin-bottom: 0;
+}
+
+.cui-table-pagination .page-list {
+  display: inline-block;
+}
+
+.cui-table-toolbar .columns-left {
+  margin-right: 5px;
+}
+
+.cui-table-toolbar .columns-right {
+  margin-left: 5px;
+}
+
+.cui-table-toolbar .columns label {
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: 1.428571429;
+}
+
+.cui-table-toolbar .bs-bars,
+.cui-table-toolbar .search,
+.cui-table-toolbar .columns {
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  line-height: 34px;
+}
+
+.cui-table-pagination li.disabled a {
+  pointer-events: none;
+  cursor: default;
+}
+
+.cui-table-loading {
+  display: none;
+  position: absolute;
+  top: 42px;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 99;
+  background-color: #fff;
+  text-align: center;
+}
+
+.cui-table-body .card-view .title {
+  font-weight: bold;
+  display: inline-block;
+  min-width: 30%;
+  text-align: left !important;
+}
+
+/* support bootstrap 2 */
+.cui-table-body thead th .th-inner {
+  box-sizing: border-box;
+}
+
+.table th, .table td {
+  vertical-align: middle;
+  box-sizing: border-box;
+}
+
+.cui-table-toolbar .dropdown-menu {
+  text-align: left;
+  max-height: 300px;
+  overflow: auto;
+}
+
+.cui-table-toolbar .btn-group > .btn-group {
+  display: inline-block;
+  margin-left: -1px !important;
+}
+
+.cui-table-toolbar .btn-group > .btn-group > .btn {
+  border-radius: 0;
+}
+
+.cui-table-toolbar .btn-group > .btn-group:first-child > .btn {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.cui-table-toolbar .btn-group > .btn-group:last-child > .btn {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.cui-table .table > thead > tr > th {
+  vertical-align: bottom;
+  border-bottom: 1px solid #ddd;
+}
+
+/* support bootstrap 3 */
+.cui-table .table thead > tr > th {
+  padding: 0;
+  margin: 0;
+}
+
+.cui-table .cui-table-footer tbody > tr > td {
+  padding: 0 !important;
+}
+
+.cui-table .cui-table-footer .table {
+  border-bottom: none;
+  border-radius: 0;
+  padding: 0 !important;
+}
+
+.cui-table .pull-right .dropdown-menu {
+  right: 0;
+  left: auto;
+}
+
+/* calculate scrollbar width */
+p.cui-table-scroll-inner {
+  width: 100%;
+  height: 200px;
+}
+
+div.cui-table-scroll-outer {
+  top: 0;
+  left: 0;
+  visibility: hidden;
+  width: 200px;
+  height: 150px;
+  overflow: hidden;
+}
+
+/* for get correct heights  */
+.cui-table-toolbar:after, .cui-table-pagination:after {
+  content: "";
+  display: block;
+  clear: both;
+}
