简易表格组件上传

--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -1,3 +1,6 @@
 @charset "utf-8";
-
-@import "./_table_mixin";
+@mixin animation($params){
+  -webkit-animation:$params;
+  -moz-animation:$params;
+  animation:$params;
+}
